# llm-localfirst

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: manager_worker.py  quickstart.py
llm_localfirst/: __init__.py  cli.py  config.py  errors.py  policy.py  reachability.py  registry.py  router.py
llm_localfirst/backends/: __init__.py  anthropic.py  base.py  openai_compat.py
llm_localfirst/integrations/: __init__.py  mcp.py  pydantic_ai.py
tests/: conftest.py  test_backends.py  test_cli.py  test_integrations.py  test_policy.py  test_reachability.py  test_registry.py  test_router.py
