[project]
name = "llm-localfirst"
version = "0.1.1"
description = "Local-first LLM router: keep sensitive data and bulk text labor on your own models, call the cloud only for the hard part. Privacy-routing (fail-closed) + manager-worker delegation + allowlist guard, MCP-native."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shaxzodbek Qambaraliyev", email = "shaxzodbek@blaze.uz" }]
keywords = ["llm", "router", "local-first", "ollama", "mcp", "claude", "privacy", "pydantic-ai", "vllm", "manager-worker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core stays dependency-light: the routing brain (decide()) needs only pydantic-settings.
# Provider SDKs are optional extras, imported lazily — the decide()-only path needs none.
dependencies = [
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
mcp = ["mcp>=1.2"]
pydantic-ai = ["pydantic-ai-slim>=1.0"]
all = ["anthropic>=0.40", "openai>=1.40", "mcp>=1.2", "pydantic-ai-slim>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6", "anyio>=4.0", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/shaxzodbek-uzb/llm-localfirst"
Repository = "https://github.com/shaxzodbek-uzb/llm-localfirst"
Issues = "https://github.com/shaxzodbek-uzb/llm-localfirst/issues"

[project.scripts]
llm-localfirst = "llm_localfirst.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_localfirst"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # provider SDKs are optional, lazily imported
files = ["llm_localfirst"]
